# will-sst

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  config.yaml  docker-compose.build.yml  docker-compose.prod.yml  docker-compose.yml  gradio_app.py  main.py  pyproject.toml  requirements.txt  voices.json
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: Deploy.md  Deploy.vi.md  LORA_USAGE.md
finetune/: README.md  create_voices_json.py  finetune_VieNeu-TTS.ipynb  train.py
finetune/configs/: lora_config.py
finetune/data_scripts/: convert_csv_format.py  debug_filter.py  filter_data_relaxed.py  fix_multiline.py  test_format.py
finetune/dataset/: metadata.csv  metadata_cleaned.csv  metadata_encoded.csv
vieneu/: __init__.py  core.py
vieneu/assets/samples/: MyCustomVoice.pt  MyCustomVoice.txt  Will.pt  Will.txt  Willl.pt
vieneu_utils/: core_utils.py  normalize_text.py  phonemize_text.py
